# writeforall-rust-crate

./: Cargo.toml  README.md
src/: main.rs  tip.rs  types.rs
src/app/: args.rs  clap.rs  config.rs  confy.rs  run.rs
src/fun/: from_list_pathable_string_into_list_path_buf.rs  from_list_str_into_map_string_string.rs  from_set_pathable_string_into_set_path_buf.rs
tests/: clap.rs  test.rs  util.rs
tests/tutorial/: actual.txt=expect.txt  input.txt
